Repositorio foi reorganizado

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,12 +9,12 @@
 				"-fdiagnostics-color=always",
 				"-g",
 				"main.c",
-				"Misc.c",
-				"Usuario.c",
-				"Postagem.c",
-				"Comentario.c",
-				"Imagem.c",
-				"Interface.c",
+				"Modulos\\Misc.c",
+				"Modulos\\Usuario.c",
+				"Modulos\\Postagem.c",
+				"Modulos\\Comentario.c",
+				"Modulos\\Imagem.c",
+				"Modulos\\Interface.c",
 				"-o",
 				"Programa.exe"
 			],
