--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,10 +8,10 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${fileDirname}\\Programa.exe",
+            "program": "D:\\Progm\\C\\ProjectDune\\Programa.exe",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "D:\\Progm\\C\\ProjectDune",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
