--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,13 +5,37 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
+            "name": "(gdb) Debugar - Linux",
             "type": "cppdbg",
             "request": "launch",
-            "program": "D:\\Progm\\C\\ProjectDune\\Programa.exe",
+            "program": "${fileDirname}/Programa.out",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "D:\\Progm\\C\\ProjectDune",
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Habilitar a reformatação automática para gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description":  "Definir Tipo de Desmontagem como Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) Debugar - Windows",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${fileDirname}\\Programa.exe",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -30,6 +54,5 @@
             ],
             "preLaunchTask": "C/C++: gcc.exe build active file"
         }
-
     ]
 }
